tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_errors@wrong_type_arg.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/components/wrong_type_arg.txt
---
error: Component argument `name` (type: `i64`) does not match expected type: `string`
 --> tpl:1:4
  |
1 | {{ <display_name name={1}/> }}
  |    ^^^^^^^^^^^^^^^^^^^^^^^^
